--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@angular/platform-browser": "^11.1.2",
         "@angular/platform-browser-dynamic": "^11.2.7",
         "@angular/router": "~11.1.0",
+        "angular-cli-ghpages": "^1.0.0-rc.1",
         "firebase": "^8.3.0",
         "rxjs": "~6.6.0",
         "sweetalert2": "^10.15.6",
